--- a/EDA/2024.md
+++ b/EDA/2024.md
@@ -12,7 +12,7 @@ From [The World Factbook](https://www.cia.gov/the-world-factbook/) construct a d
 
 To make variables comparable, you can select also derived variables such as (Labor force / Population), (Annual passenger traffic on registered air carriers / Population), or (Total airports / Land area).
 
-The list of available variables can be seen from a description of the selected country - for example [Italy](italy-factbook.pdf). Here is also a [world map](world_pol.pdf).
+The list of available variables can be seen from a description of the selected country - for example [Italy](Italy-Factbook.pdf). Here is also a [world map](world_pol.pdf).
 
 For visual inspection, the additional variable **region** (North America, Central America, South America, Europe, Africa, Middle East, Central Asia, South Asia, East & Southeast Asia, Australia & Oceania, Antarctica) would be very useful. This partition can be constructed from the [region's countries lists](http://vladowiki.fmf.uni-lj.si/lib/exe/fetch.php?media=ru:hse:files:regions.zip).
 
