--- a/EDA/2024.md
+++ b/EDA/2024.md
@@ -14,7 +14,8 @@ To make variables comparable, you can select also derived variables such as (Lab
 
 The list of available variables can be seen from a description of the selected country - for example [Italy](Italy-Factbook.pdf). Here is also a [world map](world_pol.pdf).
 
-For visual inspection, the additional variable **region** (North America, Central America, South America, Europe, Africa, Middle East, Central Asia, South Asia, East & Southeast Asia, Australia & Oceania, Antarctica) would be very useful. This partition can be constructed from the region's countries lists [1](Regions1.zip) [2](Regions2.zip).
+For visual inspection, the additional variable **region** (North America, Central America, South America, Europe, Africa, Middle East, Central Asia, South Asia, East & Southeast Asia, Australia & Oceania, Antarctica) would be very useful. This partition can be constructed from the region's countries lists [1](https://github.com/bavla/HSE/raw/refs/heads/master/EDA/Regions1.zip) [2]([Regions2.zip](https://github.com/bavla/HSE/raw/refs/heads/master/EDA/Regions2.zip)).
+
 
 
 
