--- a/EDA/2024.md
+++ b/EDA/2024.md
@@ -50,7 +50,7 @@ Example [extracting a selected variable from the Factbook](fb.md).
 
 ## Project 2
 
-<img src="openalex.png" width="250">
+<img src="https://github.com/bavla/EDA/blob/main/24/openalex.png" width="250">
 
 The [OpenAlex](https://openalex.org) Dataset is a comprehensive, open-source bibliographic database offering extensive information on academic publications.
 
