--- a/EDA/2024.md
+++ b/EDA/2024.md
@@ -87,7 +87,7 @@ For authors from the selected institution in the years 2011-2021, **create** a d
 
 For the selected institution draw the corresponding picture of the type
 
-<img src="numauths.png" width="500">
+<img src="https://github.com/bavla/EDA/blob/main/24/numauths.png" width="500">
 
 red - proportion of single-author works, blue - proportion of works with 2 authors, etc.
 
