--- a/EDA/2024.md
+++ b/EDA/2024.md
@@ -56,7 +56,7 @@ The [OpenAlex](https://openalex.org) Dataset is a comprehensive, open-source bib
 
 The data can be accessed using API that can be used from a web browser or user programs. [How to use API in R?](http://vladowiki.fmf.uni-lj.si/doku.php?id=vlado:work:bib:alex:r1)
 
-## Select an institution
+### Select an institution
 
 **Select** an institution with at least 25000 published works. To prevent duplication, **send** me its OpenAlex ID for confirmation.
 
@@ -70,7 +70,7 @@ For example, for [https://api.openalex.org/institutions?search=HSE](https://api.
 
  
 
-## Task 1
+### Task 1
 
 For the selected institution in the years 2011-2021, **list** names of the top 10 units (total values) and **draw** the frequency distribution by years of the top unit and the joint distribution of all units of the following variables
   - number of works of an author in a given year
@@ -83,7 +83,7 @@ For example. Assume that author A wrote in the year 2015 three works a: 1, b: 5,
 
 For authors from the selected institution in the years 2011-2021, **create** a data frame (author's OpenAlex ID, author's name, total number of works, total fractional contribution, total number of works with foreigners) and **save** it in CSV format.
 
-## Task 2
+### Task 2
 
 For the selected institution draw the corresponding picture of the type
 
@@ -99,7 +99,7 @@ red - proportion of single-author works, blue - proportion of works with 2 autho
 **Explore a large data set**\
 
 
-There are many data sets available: planes ([1](http://stat-computing.org/dataexpo/2009/), [2](https://www.kaggle.com/usdot/flight-delays)), [taxi](http://toddwschneider.com/posts/analyzing-1-1-billion-nyc-taxi-and-uber-trips-with-a-vengeance/), [Kaggle](https://www.kaggle.com/datasets), [Data world](https://data.world/),[European Social Survey](http://www.europeansocialsurvey.org/), [V-dem](https://www.v-dem.net/en/data/data/v-party-dataset/), [Pew research](https://www.pewresearch.org/tools-and-resources/),[Food data](https://fdc.nal.usda.gov/download-datasets.html), ..., **your own source**. Explore the **selected** data set: select variables and
+There are many data sets available: [planes](https://www.kaggle.com/usdot/flight-delays), [taxi](http://toddwschneider.com/posts/analyzing-1-1-billion-nyc-taxi-and-uber-trips-with-a-vengeance/), [Kaggle](https://www.kaggle.com/datasets), [Data world](https://data.world/),[European Social Survey](http://www.europeansocialsurvey.org/), [V-dem](https://www.v-dem.net/en/data/data/v-party-dataset/), [Pew research](https://www.pewresearch.org/tools-and-resources/),[Food data](https://fdc.nal.usda.gov/download-datasets.html), ..., **your own source**. Explore the **selected** data set: select variables and
 explore them (distribution, extreme values, ...), explore relations among variables (pairs, clustering, regression, derived quantities, 
 interesting observations), and ideas for detailed analyses. **Report** your findings.
 
