--- a/EDA/2024.md
+++ b/EDA/2024.md
@@ -1,5 +1,14 @@
 # 2024
 
+## Slides 
+
+  - [Info](./pdf/1-info.pdf)
+  - [Introduction](./pdf/2-intro.pdf)
+  - [Data on files](./pdf/3-data.pdf)
+  - [Cleaning and exploring](./pdf/4-clean.pdf) 
+  - [Visualization](./pdf/5-visual.pdf) 
+  - [Symbolic data analysis](./pdf/6-sda.pdf) 
+
 [Report](rep.md)
 
 ## Project 1
